Fix schema JSON encoding without private JDK access (#1803)
Fixes #1801

### Problem

Kyo Schema JSON encoding initializes a JVM-specific `AsciiStringFactory`
that uses `MethodHandles.privateLookupIn` to invoke a private
`String(byte[], byte)` constructor. On a standard JVM where `java.lang`
is not opened, the first JSON string result fails with
`ExceptionInInitializerError` and `IllegalAccessException`.

The repository-wide test JVM option opened `java.lang`, which masked
this failure in the module test suite.

### Solution

Construct JSON result strings from the written byte range with the
public UTF-8 `String` constructor in shared `JsonWriter` code.

This change also:

- removes the JVM, Scala.js/Wasm, and Native `AsciiStringFactory`
implementations
- removes the inherited `java.lang` opening from `kyo-schema-jsonJVM`
tests
- adds a JVM regression asserting `java.lang` remains closed while ASCII
and UTF-8 output succeeds
- moves direct `JsonWriter` depth and comma-tracking tests into a shared
writer suite
- updates maintained schema documentation to describe the shared
implementation

### Notes

- Reproduced the reported failure with Kyo 1.0.0-RC5, Scala 3.8.4, and
JDK 25 without `--add-opens`.
- Verified the same reproducer against this branch without
`--add-opens`: `encoded ok: {"name":"Alice","age":30}`.
- Passed the complete `kyo-schema-json` test suites on JVM, Scala.js,
Scala Native, and Wasm.
- Passed `scalafmtCheckAll`.

#### Benchmark

Compared the original copied-buffer plus private-constructor path with
the shared public `String(byte[], offset, length, UTF_8)` path on JDK
25.0.1. JMH used 3 forks, 3 one-second warmup iterations, 5 one-second
measurement iterations, and the GC profiler. Inputs were exact 32-byte
and 4096-byte JSON-shaped ASCII and multibyte UTF-8 payloads. Setup
asserted both implementations returned identical strings.

| Payload | Original throughput | Public UTF-8 throughput | Original
allocation | Public UTF-8 allocation |
| --- | -